@@ -1,11 +1,11 @@
 class ListsController < ApplicationController
   def index
-    @lists = List.paginate :per_page => 1, :page => params[:page], :order => 'created_at DESC'
+    @lists = List.paginate :per_page => G140[:categories_per_page], :page => params[:page], :order => 'created_at DESC'
   end
 
   def show
-    @list = List.find_by_name(params[:id])
-    @tweets = TWITTER_HTTP_AUTH.tweets_from_list(@list, G140[:side_page_tweets_per_list])
-    @members = TWITTER_HTTP_AUTH.members_from_list(@list)
+    @list = List.find(params[:id])
+    @tweets = Tweet.find :all, :limit => G140[:tweets_per_list], :order => 'tweet_id DESC', :include => :user
+    @users = @list.users.find :all, :limit => G140[:users_per_list]
   end
 end
