@@ -1,10 +1,13 @@
 class List < ActiveRecord::Base
-  has_many :subscriptions
+  CAPITALS = "АБВГДЃЕЖЗЅИЈКЛЉМНЊОПРСТЌУФХЦЧЏШ"
+  DOWNCASE = "абвгдѓежзѕијклљмнњопрстќуфхцчџш"
+
+  has_many :subscriptions, :dependent => :destroy
   has_many :users, :through => :subscriptions
 
   def self.most_subscribed_lists(lists_limit)
     find :all,
-      :select => 'lists.name, COUNT(lists.id) as count',
+      :select => 'lists.id, lists.name, COUNT(lists.id) as count',
       :joins => :subscriptions,
       :group => "subscriptions.list_id",
       :limit => lists_limit,
@@ -12,6 +15,6 @@ class List < ActiveRecord::Base
   end
 
   def to_param
-    name
+    "#{id}-#{name.gsub(/[^#{CAPITALS}#{DOWNCASE} ]/, '-')}"
   end
 end
