@@ -13,34 +13,6 @@ class TwitterHttpAuth
     @username
   end
 
-  def tweets_from_list(list, limit)
-    base.list_timeline(username, list.name, :per_page => limit)
-  rescue Twitter::NotFound
-    []
-  end
-
-  def tweets_from_lists(lists, limit)
-    lists_tweets = {}
-    lists.each do |list|
-      lists_tweets[list.name] = tweets_from_list(list, limit)
-    end
-    lists_tweets.reject{|k, v| v.empty?}
-  end
-
-  def members_from_list(list)
-    base.list_members(username, list.name, -1).users.compact!
-  rescue Twitter::NotFound
-    []
-  end
-
-  def members_from_lists(lists)
-    lists_members = {}
-    lists.each do |list|
-      lists_members[list.name] = members_from_list(list)
-    end
-    lists_members.reject{|k, v| v.empty?}
-  end
-
   def save_tweets(tweets)
     tweets.each do |tweet|
       Tweet.create(
