@@ -1,34 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <title>Welcome to 140.mk!</title>
-  </head>
-  <body>
-    <div>
-      <%= link_to "Home", root_path %> |
-      <%= link_to "Users", users_path %> |
-      <%= link_to "Lists", lists_path %>
-    </div>
-    <div style="float: right;">
-      <%- unless signed_in? -%>
-        <%= link_to 'Login', session_path, :method => :post -%>
-      <%- else -%>
-      Yo <%= link_to current_user.screen_name, my_tweets_path %>!
-      (<%= link_to "tweets", tweets_path %> | <%= link_to "subscriptions", subscriptions_path %> | <%= link_to "logout", session_path, :method => :delete %>)
-      <% end %>
-    </div>
-
-    <%- unless flash[:notice].blank? -%>
-      <p style="color: green"><%= flash[:notice] %></p>
-    <%- end -%>
-    <%- unless flash[:error].blank? -%>
-      <p style="color: red"><%= flash[:error] %></p>
-    <%- end -%>
-
-    <%= yield -%>
-
-  </body>
-</html>
