@@ -1,6 +1,0 @@
-<h1><%= t('lists.title') %></h1>
-
-<% for list in @lists -%>
-  <p><%= list.name -%> (<%= time_ago_in_words(list.created_at) -%> ago)</p>
-  <p><%= will_paginate @lists %></p>
-<% end -%>
