@@ -1,4 +1,0 @@
-<div class="pagination">
-  <%= link_to '&lt; Newer', {:page => (params[:page].to_i - 1)} if params[:page] && (params[:page].to_i - 1) > 0 %>
-  <%= link_to 'Older &gt;', {:page => (params[:page].to_i + 1)} %>
-</div>
