@@ -1,17 +1,0 @@
-<h1><%= current_user.screen_name -%>'s friends timeline</h1>
-
-<p>
-  <%= @user.name %> <br />
-  <%= @user.description %> <br />
-  <%= auto_link @user.url %>
-</p>
-
-<% for tweet in @tweets -%>
-  <p>
-    <%= link_to h(tweet.user.screen_name), user_url(tweet.user.screen_name) -%> (<%= time_ago_in_words tweet.created_at -%>)<br />
-    <%= auto_link(tweet.text) %>
-  </p>
-<% end -%>
-
-<%= render :partial => 'pagination' %>
-
