@@ -1,8 +1,8 @@
 .tweets
   - tweets.each do |tweet|
     .tweet
-      = link_to image_tag(tweet.user.profile_image_url), user_url(tweet.user.screen_name)
+      = link_to image_tag(tweet.user.photo), tweet.user
       .body
-        = link_to h(tweet.user.screen_name), user_url(tweet.user.screen_name)
+        = link_to h(tweet.user.screen_name), tweet.user
         %span.when= t('tweet.created_at', :time => time_ago_in_words(tweet.created_at))
         = auto_link(tweet.text)
