@@ -1,10 +1,9 @@
 #categories
-  - @lists_tweets.each_pair do |list_name, tweets|
-    .category{:id => "category_#{list_name.underscore}"}
-      %h2= link_to list_name, list_path(list_name)
+  - @lists.each do |list|
+    .category{:id => "category_#{list.name.underscore}"}
+      %h2= link_to list.name, list
       .tabs
-        = link_to_function t('category.tweets'), "switch_to_tweets('category_#{list_name.underscore}')", :class => 'tweets_link selected'
-        = link_to_function t('category.users'), "switch_to_users('category_#{list_name.underscore}')", :class => 'users_link'
-      = render :partial => 'tweets', :object => tweets
-      = render :partial => 'users', :locals => { :list_name => list_name }
-
+        = link_to_function t('category.tweets'), "switch_to_tweets('category_#{list.name.underscore}')", :class => 'tweets_link selected'
+        = link_to_function t('category.users'), "switch_to_users('category_#{list.name.underscore}')", :class => 'users_link'
+      = render :partial => 'tweets', :object => @lists_tweets[list.name]
+      = render :partial => 'users', :object => @lists_users[list.name]
