@@ -1,23 +1,0 @@
-<h1><%= t('title.last_tweets') %></h1>
-<% @lists_tweets.each_pair do |list_name, tweets| -%>
-  <h2><%= translate_list_name(list_name) %></h2>
-  <% for tweet in tweets -%>
-    <p>
-      <%= link_to h(tweet.user.screen_name), user_url(tweet.user.screen_name) -%> (<%= t('tweet.created_at', :time => time_ago_in_words(tweet.created_at)) -%>)<br />
-      <%= auto_link(tweet.text) %>
-    </p>
-  <% end -%>
-<% end -%>
-
-<h1><%= t('title.last_members') %></h1>
-<% @lists_members.each_pair do |list_name, members| -%>
-  <h2><%= translate_list_name(list_name) %></h2>
-  <% for member in members -%>
-    <p>
-      <%= link_to h(member.screen_name), user_url(member.screen_name) -%> 
-      (<%= t('user.created_at', :time => time_ago_in_words(member.created_at)) -%>, 
-      <%= t('user.has_written') %>
-      <%= pluralize(member.statuses_count, t('user.tweet')) %>)<br />
-    </p>
-  <% end -%>
-<% end -%>
