@@ -1,7 +1,11 @@
 G140 = {
   :site_name => "140.mk",
-  :front_page_lists_count => 6,
-  :front_page_tweets_per_list => 5,
-  :side_page_tweets_per_list => 10,
-  :max_lists => 5
+  :front_page_lists_count => 4,
+  :tweets_per_list => 20,
+  :users_per_list => 10,
+  :max_lists => 5,
+  :my_tweets_per_page => 10,
+  :tweets_per_page => 10,
+  :categories_per_page => 10,
+  :users_per_page => 10
 }
